fix admin tab wrap

--- a/app/static/styles.scss
+++ b/app/static/styles.scss
@@ -2585,6 +2585,11 @@ form {
   }
 }
 
+#typeTab .nav-link {
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
 .accordion-button {
   padding: 7px 12px;
 }
